@@ -1,3 +1,6 @@
+[B]2.8.0~rc2[/B]
+- added windows mouse support to UI client
+
 [B]2.8.0~rc1[/B]
 - major EPG improvements by crackulator
 - fixed several scrolling errors in EPG listings
